# social-media-ds-course

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: deploy-frontend.yml
demos/: README.md
demos/4chan/: boards.ipynb  catalog.ipynb  thread.ipynb
demos/bluesky/: search_posts.ipynb
demos/data_format/: csv_basics.ipynb  fips.csv  json_basics.ipynb  sample.csv  sample.json  sample_broken.csv  sample_broken.json
demos/data_vis/: data_vis.ipynb
demos/network/: centrality.ipynb
demos/stats/: descriptive.ipynb  hypothesis_testing.ipynb
demos/youtube/: channel_information.ipynb  video_information.ipynb
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: resources.json  schedule.json
frontend/src/: App.vue  style.css
frontend/src/composables/: useConfig.js  useVersion.js
frontend/src/pages/: Home.vue  Resources.vue  Schedule.vue  Staff.vue
frontend/src/router/: index.js
frontend/src/wrappers/: HomeWrapper.vue
scripts/: new-semester.sh  validate-versions.py
syllabus/: Makefile  README.md  memoir-article-styles.sty  org-preamble-pdflatex.sty  syllabus.tex
tools/: gen_schedule.js
versions/: README.md  config.json
versions/Fall2025/components/: Home.vue
versions/Fall2025/content/: home.json  resources.json  staff.json
versions/Fall2025/demos/: README.md
versions/Fall2026/components/: Home.vue
versions/Fall2026/content/: home.json  staff.json
versions/_template/components/: Home.vue
versions/_template/content/: home.json  staff.json
(+14 files in other folders)
